<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/tools">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">Galway</string>

    <string name="pref_units_key" translatable="false">unit</string>
    <string name="pref_units_label">Unit</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>

    <string name="action_map">Map</string>

    <string name="action_share">Share</string>

    <string name="hashtag">#SunshineApp</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><!--Stops a blank character appearing in the app
      --><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <string name="format_wind_mph"><!--
     -->Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="format_wind_kmh"><!--
     -->Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.android.sunshine.app</string>

    <string name="format_notification"><!--
     -->Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>

    <string name="pref_last_notification">last_notification</string>

    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

</resources>
