<?xml version="1.0" encoding="utf-8"?>
<!--<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        ></EditTextPreference>

    <ListPreference
        android:title="@string/pref_units_label"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options"
        ></ListPreference>

    <CheckBoxPreference
        android:title="@string/pref_enable_notifications_label"
        android:theme="@style/SunshineSwitch"
        android:shadowColor="@color/sunshine_yellow"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />
 http://stackoverflow.com/questions/33533893/how-to-use-preferences-in-android-support-library-v7-rev23
</PreferenceScreen>-->

<android.support.v7.preference.PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.v7.preference.PreferenceCategory
        android:title="Test" >

        <EditTextPreference
            android:title="@string/pref_location_label"
            android:key="@string/pref_location_key"
            android:defaultValue="@string/pref_location_default"
            android:inputType="text"
            android:singleLine="true"
            />

        <ListPreference
            android:title="@string/pref_units_label"
            android:key="@string/pref_units_key"
            android:defaultValue="@string/pref_units_metric"
            android:entryValues="@array/pref_units_values"
            android:entries="@array/pref_units_options"
            />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:title="@string/pref_enable_notifications_label"
            android:theme="@style/SunshineSwitch"
            android:shadowColor="@color/sunshine_yellow"
            android:key="@string/pref_enable_notifications_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:defaultValue="@string/pref_enable_notifications_default" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>